# jniRootImgui

./: LICENSE  readme.md  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jniRootimGui/: build.gradle.kts
jniRootimGui/src/main/: AndroidManifest.xml
jniRootimGui/src/main/aidl/com/muchen/jniRootImGui/: ITestService.aidl
jniRootimGui/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jniRootimGui/src/main/cpp/include/draw/: ImGuiView.h
jniRootimGui/src/main/cpp/include/imgui/: imgui_impl_android.h
jniRootimGui/src/main/cpp/src/draw/: ImGuiView.cpp
jniRootimGui/src/main/cpp/src/imgui/: imgui_impl_android.cpp
jniRootimGui/src/main/cpp/src/tools/: tools.cpp
jniRootimGui/src/main/java/com/muchen/jniRootImGui/: MainActivity.java
jniRootimGui/src/main/java/com/muchen/jniRootImGui/AIDLService/: AIDLService.java
jniRootimGui/src/main/java/com/muchen/jniRootImGui/imguiView/: ImGuiView.java
jniRootimGui/src/main/java/com/muchen/jniRootImGui/util/: STools.java  permissionUtil.java
jniRootimGui/src/main/res/drawable/: round.xml
jniRootimGui/src/main/res/layout/: activity_main.xml
jniRootimGui/src/main/res/values/: strings.xml  themes.xml
jniRootimGui/src/main/res/values-night/: themes.xml
